...
                                    <outlet property="cityName" destination="pxy-BF-hlH" id="fkU-Rq-mDo"/>
                                    <outlet property="timestamp" destination="h6n-ar-7Jr" id="WfJ-4f-RfR"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CityTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="NNa-vy-ayC" id="mCW-eA-Ckc"/>
                            <outlet property="delegate" destination="NNa-vy-ayC" id="Hkv-yP-lpc"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="City Air" id="Spx-TO-xYW"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ouA-pt-fiF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="602.89855072463774" y="103.79464285714285"/>
        </scene>
        <!--City Detail View Controller-->
...
